examples/invalid/test30.alice

The looking-glass hatta ()
opened 
  x was a number of 10 and y was a number of 100.
  z was a letter of 'z'.
  perhaps (z + x == 100) so
    .
  because Alice was unsure which
  perhaps (x && (y > x)) so
    .
  because Alice was unsure which
closed
